LogIn and SignUp with GUI

--- a/view/login.html
+++ b/view/login.html
@@ -23,7 +23,7 @@
 			  <p>Please enter your login Detail</p>
 			  <br/><br/>
 			  
-			  <form action="/signin" method="GET">
+			  <form action="user/login" method="POST">
   <div class="form-group"> 
     <input type="email" class="form-control_login" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" placeholder="Enter email"> 
   </div>
